Landing page: small alignment/spacing fix

--- a/frontend/src/styles/landing-page.scss
+++ b/frontend/src/styles/landing-page.scss
@@ -34,6 +34,10 @@
     width: 7rem;
   }
 
+  .section-header {
+    text-align: left;
+  }
+
   .gutter-filler-left {
     position: absolute;
     display: block;
